# wsld

./: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
client/: Cargo.toml  package.json
client/src/: config.rs  gpg_agent.rs  main.rs  time.rs  x11socket.rs
server/: Cargo.toml  tauri.conf.json
server-ui/: package.json
server-ui/src/: app.html
server-ui/src/lib/: Switch.svelte
server-ui/src/routes/: +page.svelte
server/src/: gpg_agent.rs  main.rs
