[package]
name = "wsldhost"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["net", "rt", "macros", "io-util", "time", "process", "fs"] }
async-io = "1"
once_cell = "1"
winapi = { version = "0.3", features = ["wincon", "libloaderapi", "combaseapi"] }
winreg = "0.50"
widestring = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
log = "0.4"
tauri = { version = "2.0.6", features = [ "tray-icon" ] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-autostart = "2.0.1"
